environments/demo/edge-config/non-active/httpbin/static/httpbin-vs-static.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: static-httpbin-httpbin-8000
            namespace: gloo-system
